# backend/app/resource/course.py
@@ -57,6 +57,14 @@ class BulletinListAPI(Resource):
         bulletin = Bulletin.objects()
         serialized_payload = BulletinSchema(many=True).dump(bulletin)
         return serialized_payload, 200
+    
+    @jwt_required()
+    def post(self):
+        serialized_payload = validator.add_bulletin()
+        bulletin = Bulletin(**serialized_payload)
+        bulletin.save()
+        serialized_payload = BulletinSchema().dump(bulletin)
+        return serialized_payload, 200
 
 class BulletinAPI(Resource):
     @jwt_required()
@@ -65,10 +73,22 @@ class BulletinAPI(Resource):
         bulletin = Bulletin.objects.get(id=bulletin_id)
         serialized_payload = BulletinSchema().dump(bulletin)
         return serialized_payload, 200
-    #TODO (update, delete)
-
-
-
-        
-
-            
+    
+    @jwt_required()
+    def put(self, bulletin_id):
+        bulletin = Bulletin.objects.get(id=bulletin_id)
+        user = User.objects.get(id=get_jwt_identity())
+        serialized_payload = validator.add_bulletin()
+        for key, value in serialized_payload.items():
+            setattr(bulletin, key, value)
+        bulletin.save()
+        serialized_payload = BulletinSchema().dump(bulletin)
+        return serialized_payload, 200
+    
+    @jwt_required()
+    def delete(self, bulletin_id):        
+        bulletin = Bulletin.objects.get(id=bulletin_id)
+        bulletin.delete()
+        app.logger.info("Bulletin with id %s deleted", bulletin_id)
+        msg={"message": "Bulletin: {} deleted".format(bulletin_id)}
+        return msg, 200
