# backend/static/openapi.yaml
@@ -15,10 +15,10 @@ servers:
           - https
         default: http
       serverip:
-        default: 0.0.0.0
+        default: 127.0.0.1
         description: server IP
       port:
-        default: "5000"
+        default: "5003"
         description: assigned port
 
 tags:
@@ -26,6 +26,8 @@ tags:
     description: Endpoint for managing user
   - name: Courses
     description: Endpoint for managing courses
+  - name: Bulletin
+    description: Endpoint for managing bulletin
 
 paths:
   /user:
@@ -377,6 +379,243 @@ paths:
                     type: string
                     description: "error description"
                     example: "Server Error"
+                    
+# -------------------------------------------------------------------------
+  /bulletin:
+    post:
+      tags:
+        - Bulletin
+      summary: Add Bulletin
+      security:
+        - BearerAuth: []
+      description: |
+        Create new bulletin
+        ```
+        curl --location --request POST '`${url}`/api/v1/bulletin' \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer {TOKEN} \
+            --data-raw '{
+                "name": "Beasiswa Gratis!!!",
+                "content": "Dapatkan beasiswa gratis"
+            }'
+        ```
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/BulletinPostRequestBody"
+
+      responses:
+        "200":
+          description: "Success response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BulletinObject"
+
+        "default":
+          description: |
+            ```
+            400 - Bad Request
+            401 - Unauthorized
+            403 - Forbidden
+            404 - Not Found
+            422 - Unprocessable Entity
+            500 - Error on server
+            ```
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  detail:
+                    type: string
+                    description: "error description"
+                    example: "Server Error"
+    get:
+      tags:
+        - Bulletin
+      summary: Get All Bulletin
+      security:
+        - BearerAuth: []
+      description: |
+        Get bulletin resource
+        ```
+        curl --location --request GET '`${url}`/api/v1/bulletin' \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer {TOKEN} \
+        ```
+      responses:
+        "200":
+          description: "Success response"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/BulletinObject"
+        "default":
+          description: |
+            ```
+            400 - Bad Request
+            401 - Unauthorized
+            403 - Forbidden
+            404 - Not Found
+            422 - Unprocessable Entity
+            500 - Error on server
+            ```
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  detail:
+                    type: string
+                    description: "error description"
+                    example: "Server Error"
+
+  /bulletin/{bulletin_id}:
+    parameters:
+      - name: bulletin_id
+        in: path
+        required: true
+        schema:
+          type: string
+
+    get:
+      tags:
+        - Bulletin
+      summary: Get bulletin by bulletin ID
+      security:
+        - BearerAuth: []
+      description: |
+        Get bulletin resource
+        ```
+        curl --location --request GET '`${url}`/api/v1/bulletin/{bulletin_id}' \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer {TOKEN} \
+        ```
+      responses:
+        "200":
+          description: "Success response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BulletinObject"
+
+        "default":
+          description: |
+            ```
+            400 - Bad Request
+            401 - Unauthorized
+            403 - Forbidden
+            404 - Not Found
+            422 - Unprocessable Entity
+            500 - Error on server
+            ```
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  detail:
+                    type: string
+                    description: "error description"
+                    example: "Server Error"
+
+    delete:
+      tags:
+        - Bulletin
+      summary: Delete Bulletin By ID
+      security:
+        - BearerAuth: []
+      description: |
+        Delete Bulletin resource by ID
+        ```
+        curl --location --request DELETE '`${url}`/api/v1/bulletin/{bulletin_id}' \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer {TOKEN} \
+        ```
+      responses:
+        "200":
+          description: Bulletin successfully deleted
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Success
+
+        "default":
+          description: |
+            ```
+            400 - Bad Request
+            401 - Unauthorized
+            403 - Forbidden
+            404 - Not Found
+            422 - Unprocessable Entity
+            500 - Error on server
+            ```
+          content:
+            application/json:
+              schema:
+                type: object
+              example:
+                message: Resource not exist
+    put:
+      tags:
+        - Bulletin
+      summary: "Edit Bulletin"
+      security:
+        - BearerAuth: []
+      description: |
+        Edit the details of Bulletin
+        ```
+        curl --location --request PUT '`${url}`/api/v1/bulletin/{bulletin_id}' \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer {TOKEN} \
+            --data-raw '{
+                "name":"Beasiswa gratis",
+                "content":"Beasiswa gratissssssssssssssss"
+            }'
+        ```
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/BulletinPostRequestBody"
+
+      responses:
+        "200":
+          description: "Edit Bulletin Success response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BulletinObject"
+
+        "default":
+          description: |
+            ```
+            400 - Bad Request
+            401 - Unauthorized
+            403 - Forbidden
+            404 - Not Found
+            422 - Unprocessable Entity
+            500 - Error on server
+            ```
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  detail:
+                    type: string
+                    description: "error description"
+                    example: "Server Error"
+#--------------------------------------------------------------------------
+                    
 components:
   schemas:
     CourseObject:
@@ -439,6 +678,41 @@ components:
           type: number
         description:
           description: course description
+          type: string
+          
+    BulletinObject:
+      type: object
+      required:
+        - name
+        - content
+      properties:
+        id:
+          description: bulletin id
+          type: string
+        name:
+          description: bulletin name
+          type: string
+        content:
+          description: bulletin content
+          type: string
+        description:
+          description: bulletin description
+          type: string
+
+    BulletinPostRequestBody:
+      type: object
+      required:
+        - name
+        - content
+      properties:
+        name:
+          description: bulletin code
+          type: string
+        content:
+          description: bulletin name
+          type: string
+        description:
+          description: bulletin description
           type: string
 
   securitySchemes:
